<resources>

  <string name="app_name">Canteen-Manager</string>

  <!-- Activities -->
  <string name="app_activity_login">Sign in</string>
  <string name="app_activity_map_editor">Map</string>
  <string name="app_activity_review_list">Reviews</string>

  <!-- Main Menu -->
  <string name="menu_sign_out">Sign out</string>

  <!-- Common -->
  <string name="app_btn_save">Save</string>
  <string name="app_common_currency_euro">€</string>

  <!-- Splash screen -->
  <string name="app_splash_loading">Loading…</string>

  <!-- Login -->
  <string name="app_login_hint_user_name">User name</string>
  <string name="app_login_hint_password">Password</string>
  <string name="app_login_btn_sign_in">Sign in</string>

  <!-- Canteen Form -->
  <string name="app_canteen_hint_name">Name</string>
  <string name="app_canteen_hint_meal">Meal</string>
  <string name="app_canteen_hint_meal_price">Meal price</string>
  <string name="app_canteen_hint_address">Address</string>
  <string name="app_canteen_hint_website">Website</string>
  <string name="app_canteen_hint_phone">Phone</string>
  <plurals name="app_canteen_label_avg_waiting_time">
    <item quantity="one">Average waiting time: 1 minute</item>
    <item quantity="other">Average waiting time: %d minutes</item>
  </plurals>
  <string name="app_btn_show_reviews">Reviews</string>

  <!-- Ratings -->
  <string name="app_rating_confirm_delete_title">Delete rating</string>
  <string name="app_rating_confirm_delete_text">Do you really want to delete this rating? This cannot be undone.</string>

  <!-- Errors -->
  <string name="app_error_field_required">This field is required</string>
  <string name="app_error_field_invalid_float">This number seems to be formatted incorrectly</string>
  <string name="app_error_auth_failure">Authentication failed. Did you spell everything correctly?</string>
  <string name="app_error_load_failure_admin_canteen">Could not load canteen</string>
  <string name="app_error_load_failure_adress">Could not load address</string>
  <string name="app_error_delete_rating_failure">Could not delete rating</string>
  <string name="app_error_cannot_show_website">Could not find any app to view this website</string>
  <string name="app_error_cannot_call">Could not find any app to handle this number</string>
  <string name="app_error_no_ratings">Looks like there are no ratings yet</string>

</resources>
