<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  tools:context=".ui.activity.LoginActivity">

  <include layout="@layout/helper_content_loader" />

  <ScrollView
    android:id="@+id/vContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_gap_normal">

        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/app_canteen_hint_name"
          android:inputType="textCapCharacters"
          android:maxLines="1"
          android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_gap_normal">

        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etMeal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/app_canteen_hint_meal"
          android:inputType="textCapCharacters"
          android:maxLines="1"
          android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_gap_normal">

        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etMealPrice"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/app_canteen_hint_meal_price"
          android:inputType="textCapCharacters"
          android:maxLines="1"
          android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_gap_normal">

        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/app_canteen_hint_address"
          android:inputType="textCapCharacters"
          android:maxLines="1"
          android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_gap_normal">

        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etWebsite"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/app_canteen_hint_website"
          android:inputType="textWebEditText"
          android:maxLines="1"
          android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_gap_normal">

        <android.support.v7.widget.AppCompatEditText
          android:id="@+id/etPhone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/app_canteen_hint_phone"
          android:inputType="phone"
          android:maxLines="1"
          android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>

      <include layout="@layout/helper_vertical_spacer" />

      <android.support.design.widget.FloatingActionButton
        android:id="@+id/vSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@mipmap/ic_done"
        android:tooltipText="@string/app_btn_save"
        tools:targetApi="o" />

    </LinearLayout>
  </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
